完善es搜索功能